# website-tests

./: .prospector.yaml  .travis.yml  README.md  fic-tests.cabal  pytest.ini  requirements.txt  setup.cfg
src/: Main.hs  Stub.hs
src/Main/: Colors.hs  Expectations.hs  Tests.hs
src/Main/Tests/: ErrorPages.hs  Events.hs  General.hs  HomePage.hs  Store.hs
tests/: __init__.py  colors.py  directory_tests.py  error_tests.py  event_tests.py  general_tests.py  home_tests.py  settings.py  store_tests.py  utils.py
