name:                  fic-tests
version:               0.1.0.0
synopsis:              Tests to Ensure Proper Behavior from ic.org
description:           This package is used to test the validity of ic.org
                       against the FIC's expectations.
homepage:              http://bugs.sleepanarchy.com/projects/fic
license:               GPL-3
license-file:          LICENSE
author:                Pavan Rikhi
maintainer:            pavan@ic.org
copyright:             FIC 2014
category:              Testing
build-type:            Simple
cabal-version:         >=1.10
extra-source-files:    README.md

source-repository head
  type:                git
  location:            git@bugs.sleepanarchy.com/fic-tests.git

executable stub
  main-is:             Stub.hs
  build-depends:       base >= 4.7 && < 4.8,
                       hspec-webdriver >= 0.3.1,
                       hspec-expectations >= 0.3.3,
                       webdriver >= 0.6.0.1,
                       text
  hs-source-dirs:      src
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010

test-suite fic
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Main.Colors,
                       Main.Expectations,
                       Main.Tests,
                       Main.Tests.ErrorPages,
                       Main.Tests.Events,
                       Main.Tests.HomePage,
                       Main.Tests.Store
  other-extensions:    OverloadedStrings
  build-depends:       base >= 4.7 && < 4.8,
                       hspec-webdriver >= 0.3.1,
                       hspec-expectations >= 0.3.3,
                       webdriver >= 0.6.0.1,
                       text
  hs-source-dirs:      src
  ghc-options:         -Wall -threaded -O3
  default-language:    Haskell2010
